base/webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phi2-webui
  namespace: phi2
spec:
  selector:
    app: phi2-webui
  ports:
    - protocol: TCP
      port: 7860
      targetPort: 7860
